<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.Customer.FAQ">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:layout_gravity="center"
            android:text="FAQ"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/FAQ_1"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/FAQ_1_details"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/FAQ_2"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/FAQ_2_details"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/FAQ_3"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/FAQ_3_details"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/FAQ_4"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/FAQ_4_details"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/FAQ_5"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli"
            android:text="@string/FAQ_5_details"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="true" />


    </LinearLayout>





</ScrollView>